got working cube now video

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="wrapper">
 
 <section class="container">
-  <div id="cube">
+  <div id="cube" class="">
     <figure class="front">1</figure>
     <figure class="back">2</figure>
     <figure class="right">3</figure>
