--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <section class="container">
   <div id="cube" class="">
-    <figure class="front">1</figure>
+    <figure class="front">
+      <video class="video-background" no-controls autoplay src="https://www.youtube.com/watch?v=4aqb7MFivis" poster=""></video>
+      </figure>
     <figure class="back">2</figure>
     <figure class="right">3</figure>
     <figure class="left">4</figure>
@@ -77,7 +79,7 @@
     
 </div>
 
-
+<script src="scale.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/components/shape.min.js"></script>
 <script src="app.js"></script>
 </body>
