--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="social">
         <ul>
-            <li><a id="facebookLink" href="https://www.facebook.com/drmsntchr/?fref=ts">Facebook</a></li>
-            <li><a id="soundcloudLink" href="https://soundcloud.com/l_e_f_t">Soundcloud</a></li>
+            <li><a id="facebookLink" target="_blank" href="https://www.facebook.com/drmsntchr/?fref=ts">Facebook</a></li>
+            <li><a id="soundcloudLink" target="_blank" href="https://soundcloud.com/l_e_f_t">Soundcloud</a></li>
         </ul>
     </div>
     
@@ -29,7 +29,7 @@
     
 <div class="container">
 <article class="viewport">
-    <section class="cube">
+    <section class="cube spinning">
         <div>
             <img class="side" src="https://media.giphy.com/media/42884OFGWPMOs/giphy.gif"/>
         </div>
