added auto spin and mouse click event

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 <script src="sc.js"></script>
 <script src="cube.js"></script>
+<script src="customCube.js"></script>
 <!--<script src="waveform.js"></script> -->
     
 </body>
