added glitch effect to title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <div class="content">
     <div class="header">
-        <h1>LEFT</h1>
+        <h1 class="glitch" data-text="LEFT">LEFT</h1>
     </div>
     <div class="social">
         <ul>
