--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
 </div>
     
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
 <script src="sc.js"></script>
 <script src="cube.js"></script>
